ModelMapper added in the project and consumed in the service for transforming entity class to payload DTO